# new-4k-stitch

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  opencode.json
.github/: industrial-coding.instructions.md
.github/agents/: code-assistant.agent.md  industrial-coder.agent.md
assets/: decode_filter_video.c  decode_video.c  decoder_filter_video.cc
build-codex/: CMakeCache.txt
include/: app.h  drm_allocator.h  image_stitcher.h  image_stitcher_nv12.h  logger.h  nv12_frame.h  rk_gles_warper.h  roi_config.h  roi_visualizer.h  sensor_data_interface.h  stitching_param_generater.h
params/: roi_tuning.yaml
src/: app.cc  drm_allocator.cc  image_stitcher.cc  image_stitcher_nv12.cc  logger.cc  rk_gles_warper.cc  roi_config.cc  roi_visualizer.cc  sensor_data_interface.cc  stitching_param_generater.cc  video_decode_test.cc
